syntax = "proto3";

option java_multiple_files = true;
option java_package = "ds.service3";
option java_outer_classname = "Service3Impl";
package service3;

// Interface exported by the server.
service Service3 {
	rpc EntersToToilet(ToiletVisitsRequest) returns (ToiletVisitsResponse) {}
	rpc UpdateToiletStatus(UpdateToiletStatusRequest) returns (UpdateToiletStatusResponse){};
}
//rpc EntersToToilet:
message ToiletVisitsRequest {
	string toiletCleanedDateAndTime = 1;
	Toilet toilet = 2;
}

message ToiletVisitsResponse {
	Toilet toilet = 1;
}
message Toilet {
	int32 numberOfVisits = 1;
	string toiletName = 2;
}
//rpc UpdateToiletStatus:
message UpdateToiletStatusRequest{
	Toilet toilet = 1;
	string date = 2;
}
message UpdateToiletStatusResponse{
	bool statusUpdated = 1;
	Toilet toilet = 2;
	string date = 3;
}

message ErrorResponse {
	int32 input = 1;
	ErrorCode error_code = 2;
}

enum ErrorCode {
	ABOVE_20 = 0;
	BELOW_2 = 1;
}

